facet-macros-emit/tests/snapshots/r#mod__codegen__enum_with_facet_attributes.snap
---
source: facet-macros-emit/tests/codegen.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[facet(name = \"MyCoolEnum\", repr = \"u16\")]\n        #[repr(u16)] // Ensure repr matches if specified in facet attribute\n        enum EnumWithAttributes {\n            #[facet(name = \"FirstVariant\", discriminant = 10)]\n            VariantA,\n\n            #[facet(skip)]\n            InternalVariant(i32),\n\n            #[facet(deprecated = \"Use VariantD instead\")]\n            VariantC {\n                #[facet(sensitive)]\n                secret: String\n            },\n\n            VariantD {\n                 #[facet(default = \"forty_two\")]\n                 value: i32\n            },\n        }\n        \"#)"
---
#[used]
static ENUM_WITH_ATTRIBUTES_SHAPE: &'static ::facet::Shape =
    <EnumWithAttributes as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for EnumWithAttributes {
    const SHAPE: &'static ::facet::Shape = &const {
        #[repr(C)]
        struct __ShadowEnumWithAttributes_InternalVariant<'__facet> {
            _discriminant: u16,
            _phantom: ::core::marker::PhantomData<(*mut &'__facet ())>,
            _0: i32,
        }
        #[repr(C)]
        struct __ShadowEnumWithAttributes_VariantC<'__facet> {
            _discriminant: u16,
            _phantom: ::core::marker::PhantomData<(*mut &'__facet ())>,
            secret: String,
        }
        #[repr(C)]
        struct __ShadowEnumWithAttributes_VariantD<'__facet> {
            _discriminant: u16,
            _phantom: ::core::marker::PhantomData<(*mut &'__facet ())>,
            value: i32,
        }
        let __facet_variants: &'static [::facet::Variant] = &const {
            [
                ::facet::Variant::builder()
                    .name("VariantA")
                    .discriminant(0)
                    .fields(::facet::StructDef::builder().unit().build())
                    .build(),
                {
                    let fields: &'static [::facet::Field] = &const {
                        [::facet::Field::builder()
                            .name("_0")
                            .shape(|| {
                                ::facet::shape_of(
                                    &|s: &__ShadowEnumWithAttributes_InternalVariant<'__facet>| {
                                        &s._0
                                    },
                                )
                            })
                            .offset(::core::mem::offset_of!(
                                __ShadowEnumWithAttributes_InternalVariant<'__facet>,
                                _0
                            ))
                            .flags(::facet::FieldFlags::EMPTY)
                            .attributes(&const { [] })
                            .build()]
                    };
                    ::facet::Variant::builder()
                        .name("InternalVariant")
                        .discriminant(1)
                        .fields(::facet::StructDef::builder().tuple().fields(fields).build())
                        .build()
                },
                {
                    let fields: &'static [::facet::Field] = &const {
                        [::facet::Field::builder()
                            .name("secret")
                            .shape(|| {
                                ::facet::shape_of(&|s: &__ShadowEnumWithAttributes_VariantC<
                                    '__facet,
                                >| &s.secret)
                            })
                            .offset(::core::mem::offset_of!(
                                __ShadowEnumWithAttributes_VariantC<'__facet>,
                                secret
                            ))
                            .flags(::facet::FieldFlags::SENSITIVE)
                            .attributes(&const { [::facet::FieldAttribute::Sensitive] })
                            .build()]
                    };
                    ::facet::Variant::builder()
                        .name("VariantC")
                        .discriminant(2)
                        .fields(
                            ::facet::StructDef::builder()
                                .struct_()
                                .fields(fields)
                                .build(),
                        )
                        .build()
                },
                {
                    let fields: &'static [::facet::Field] = &const {
                        [::facet::Field::builder()
                            .name("value")
                            .shape(|| {
                                ::facet::shape_of(&|s: &__ShadowEnumWithAttributes_VariantD<
                                    '__facet,
                                >| &s.value)
                            })
                            .offset(::core::mem::offset_of!(
                                __ShadowEnumWithAttributes_VariantD<'__facet>,
                                value
                            ))
                            .flags(::facet::FieldFlags::EMPTY)
                            .attributes(
                                &const {
                                    [::facet::FieldAttribute::Default(Some(|ptr| unsafe {
                                        ptr.put(forty_two())
                                    }))]
                                },
                            )
                            .build()]
                    };
                    ::facet::Variant::builder()
                        .name("VariantD")
                        .discriminant(3)
                        .fields(
                            ::facet::StructDef::builder()
                                .struct_()
                                .fields(fields)
                                .build(),
                        )
                        .build()
                },
            ]
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(::facet::value_vtable!(Self, |f, _opts| {
                ::core::fmt::Write::write_str(f, "EnumWithAttributes")
            }))
            .def(::facet::Def::Enum(
                ::facet::EnumDef::builder()
                    .variants(__facet_variants)
                    .repr(::facet::EnumRepr::U16)
                    .build(),
            ))
            .build()
    };
}
